[package]
name = "torush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
rev_buf_reader = "0.3.0"
